--- a/html/index.html
+++ b/html/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
 <div class="container">
-    <canvas id="myCanvas" width="1900" height="1080">
-
-    </canvas>
+    <canvas id="myCanvas" width="1920" height="1080"></canvas>
+    <div class="ui">
+        <canvas id="HUD" width="1920" height="1080"></canvas>
+    </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
 <script type="module" src="../js/index.js"></script>
