10/9/2023: game + player + playeraim code cleanup

--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-    <canvas id="myCanvas" width="1920" height="1080"></canvas>
+    <canvas id="game" width="1920" height="1080"></canvas>
     <div class="ui">
         <canvas id="HUD" width="1920" height="1080"></canvas>
     </div>
