--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
 <div class="container">
     <canvas id="game" width="1920" height="1080"></canvas>
     <div class="ui">
+        <img id="opening-screen" src="../assets/ui/start_menu (2).png" alt="" width="1936" height="1096">
         <canvas id="HUD" width="1920" height="1080"></canvas>
     </div>
 </div>
