22/9/2023 judgement audios, brute n bomb healthbar cleaned

--- a/html/index.html
+++ b/html/index.html
@@ -98,10 +98,10 @@
                                         <
                                     </div>
                                     <div class="volume-meter on"></div>
-                                    <div class="volume-meter on"></div>
-                                    <div class="volume-meter on"></div>
-                                    <div class="volume-meter on"></div>
-                                    <div class="volume-meter on"></div>
+                                    <div class="volume-meter off"></div>
+                                    <div class="volume-meter off"></div>
+                                    <div class="volume-meter off"></div>
+                                    <div class="volume-meter off"></div>
                                     <div class="volume-meter off"></div>
                                     <div class="volume-meter off"></div>
                                     <div class="volume-meter off"></div>
