--- a/html/index.html
+++ b/html/index.html
@@ -13,11 +13,10 @@
     />
 </head>
 <body>
-<div id='light'></div>
 <div class='navbar'>
     <div class='navbar-container'>
         <div class='navbar-image-container'>
-            <img src='../assets/web/logo.png'>
+            <img alt='' src='../assets/web/logo.png'>
         </div>
     </div>
 </div>
@@ -54,19 +53,40 @@
                 to
                 discover a way to quiet the vicious disease.
             </p>
-            <p>
-                • From each character to subtle background elements, everything is lovingly hand-animated.
-            </p>
-            <p>
-                • Easy to pick up, difficult to master; enemies are vicious and numerous, hazards will easily crush your
-                frail body, and friendly faces remain rare.
-            </p>
-            <p>
-                • Upgrade weapons, learn new skills, discover equipment and traverse a dark, detailed world with
-                branching
-                paths and secrets abound.
-            </p>
         </div>
+    </div>
+</div>
+<div class='features-container'>
+    <p>
+        • From each character to subtle background elements, everything is lovingly hand-animated.
+    </p>
+    <p>
+        • Easy to pick up, difficult to master; enemies are vicious and numerous, hazards will easily crush your
+        frail body, and friendly faces remain rare.
+    </p>
+    <p>
+        • Upgrade weapons, learn new skills, discover equipment and traverse a dark, detailed world with
+        branching
+        paths and secrets abound.
+    </p>
+</div>
+<div class='features-container'>
+    <img alt='' src='../assets/web/campfire.png'>
+    <div class='image-cover'>
+    </div>
+    <div class='features-text-container'>
+        <h1>FEATURES</h1>
+        <p>
+            From each character to subtle background elements, everything is lovingly hand-animated.
+        </p>
+        <p>
+            Easy to pick up, difficult to master; enemies are vicious and numerous, hazards will easily crush your frail
+            body, and friendly faces remain rare.
+        </p>
+        <p>
+            Upgrade weapons, learn new skills, discover equipment and traverse a dark, detailed world with branching
+            paths and secrets abound
+        </p>
     </div>
 </div>
 <div class='map-container'>
@@ -85,13 +105,5 @@
     integrity='sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM='
     src='https://code.jquery.com/jquery-3.7.0.js'
 ></script>
-<script>
-    $(document).mousemove(function(event) {
-        const light = document.getElementById('light');
-        light.style.setProperty('--light-position-y', (event.clientY - 50) + 'px');
-        light.style.setProperty('--light-position-x', (event.clientX - 50) + 'px');
-
-    });
-</script>
 </body>
 </html>
