feat: crystal wolf

--- a/html/index.html
+++ b/html/index.html
@@ -89,6 +89,9 @@
         </p>
     </div>
 </div>
+<div class='main-character-container'>
+    <img src='../assets/web/main-character.gif'>
+</div>
 <div class='map-container'>
     <h1>EXPLORE THE LAND OF LIGHT</h1>
     <div class='image-container'>
