feat: game decorations

--- a/html/index.html
+++ b/html/index.html
@@ -56,28 +56,100 @@
             title='YouTube video player'
             width='1120'></iframe>
 </div>
+<div class='latest-news-container'>
+    <div class='title-container'>
+        <h3>
+            LATEST NEWS
+        </h3>
+    </div>
+    <div class='horizontal-news-container'>
+        <div class='news-container'>
+            <img alt='' src='../assets/web/news/news_1.png'>
+            <div class='news-content'>
+                <div class='header'>
+                    <p>
+                        3/11/2016
+                    </p>
+                    <p>
+                        ANNOUNCEMENT
+                    </p>
+                </div>
+                <div class='content'>
+                    <h3>
+                        Fast Collision
+                    </h3>
+                    <p>
+                        Hi everyone,
+
+                        Our Fast Collision change is now live, along with a few bug fixes. If you spot any issues with
+                        the build, please send an email to support@heart-machine.com detailing the problem along with
+                        your hardware specs and OS.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class='news-container'>
+            <img alt='' src='../assets/web/news/news_2.png'>
+            <div class='news-content'>
+                <div class='header'>
+                    <p>
+                        13/4/2016
+                    </p>
+                    <p>
+                        ANNOUNCEMENT
+                    </p>
+                </div>
+                <div class='content'>
+                    <h3>
+                        HLD Original Soundtrack now available!
+                    </h3>
+                    <p>
+                        Disasterpeace just spent the past couple of weeks mastering all the music from the game into one
+                        neat package of 28 tracks.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class='news-container'>
+            <img alt='' src='../assets/web/news/news_3.png'>
+            <div class='news-content'>
+                <div class='header'>
+                    <p>
+                        7/4/2016
+                    </p>
+                    <p>
+                        PATCH
+                    </p>
+                </div>
+                <div class='content'>
+                    <h3>
+                        The Speedy Patch
+                    </h3>
+                    <p>
+                        Hello Drifters!
+
+                        We've been hard at work since yesterday's release, with many life-saving updates for you. Thank
+                        you for all the support and well-wishes. We'll continue to monitor the forums to hear what
+                        you're enjoying and any further fixes required.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class='about-container'>
     <div class='about-content'>
-        <div class='about-image-container'>
-            <img src='../assets/web/about.png'>
+        <div class='score-container'>
+            <div class='score'>
+                <h3>90/100</h3>
+                <p>GAMEGRIN</p>
+            </div>
         </div>
-        <div class='about-text-container'>
-            <h1>ABOUT</h1>
-            <p>
-                Echoes of a dark and violent past resonate throughout a savage land, steeped in treasure and blood.
-                Hyper
-                Light Drifter is an action adventure RPG in the vein of the best 16­bit classics, with modernized
-                mechanics
-                and designs on a much grander scale.
-            </p>
-            <p>
-                Drifters of this world are the collectors of forgotten knowledge, lost technologies and broken
-                histories.
-                Our Drifter is haunted by an insatiable illness, traveling further into the lands of Buried Time, hoping
-                to
-                discover a way to quiet the vicious disease.
-            </p>
-        </div>
+    </div>
+    <div class='about-content'>
+        <img alt='' src='../assets/web/about.png'>
+    </div>
+    <div class='about-content'>
     </div>
 </div>
 <div class='features-container'>
