--- a/html/index.html
+++ b/html/index.html
@@ -12,8 +12,8 @@
         rel='stylesheet'
     />
 </head>
-<body>
-<div class='navbar' id='navbar'>
+<body id='scroll-body'>
+<section class='navbar section' id='navbar'>
     <div class='navbar-container'>
         <div class='navbar-container-left'>
             <img alt='' src='../assets/web/title.png'>
@@ -34,9 +34,8 @@
             </button>
         </div>
     </div>
-</div>
-<!--<div class='video-top'></div>-->
-<div class='video-container'>
+</section>
+<section class='video-container section'>
     <video autoplay loop muted>
         <source src='../assets/web/trailer.mkv' type='video/mp4' />
     </video>
@@ -44,19 +43,19 @@
     </div>
     <div class='video-text'>
         <img src='../assets/web/title.png'>
-        <a class='try-demo-button' href='game.html'>TRY DEMO</a>
+        <!--        <a class='try-demo-button' href='game.html'>TRY DEMO</a>-->
     </div>
-</div>
-
-<div class='trailer'>
+</section>
+<section class='trailer section'>
     <h3>WATCH TRAILER</h3>
-    <iframe allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share'
-            allowfullscreen frameborder='0'
-            height='630' src='https://www.youtube.com/embed/nWufEJ1Ava0?si=XJZkwktmk2fYI12I'
-            title='YouTube video player'
-            width='1120'></iframe>
-</div>
-<div class='latest-news-container'>
+    <iframe
+        allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share'
+        allowfullscreen frameborder='0'
+        height='630' src='https://www.youtube.com/embed/nWufEJ1Ava0?si=XJZkwktmk2fYI12I'
+        title='YouTube video player'
+        width='1120'></iframe>
+</section>
+<section class='latest-news-container section'>
     <div class='title-container'>
         <h3>
             LATEST NEWS
@@ -81,8 +80,10 @@
                     <p>
                         Hi everyone,
 
-                        Our Fast Collision change is now live, along with a few bug fixes. If you spot any issues with
-                        the build, please send an email to support@heart-machine.com detailing the problem along with
+                        Our Fast Collision change is now live, along with a few bug fixes. If you spot any issues
+                        with
+                        the build, please send an email to support@heart-machine.com detailing the problem along
+                        with
                         your hardware specs and OS.
                     </p>
                 </div>
@@ -104,7 +105,8 @@
                         HLD Original Soundtrack now available!
                     </h3>
                     <p>
-                        Disasterpeace just spent the past couple of weeks mastering all the music from the game into one
+                        Disasterpeace just spent the past couple of weeks mastering all the music from the game into
+                        one
                         neat package of 28 tracks.
                     </p>
                 </div>
@@ -128,7 +130,8 @@
                     <p>
                         Hello Drifters!
 
-                        We've been hard at work since yesterday's release, with many life-saving updates for you. Thank
+                        We've been hard at work since yesterday's release, with many life-saving updates for you.
+                        Thank
                         you for all the support and well-wishes. We'll continue to monitor the forums to hear what
                         you're enjoying and any further fixes required.
                     </p>
@@ -136,74 +139,268 @@
             </div>
         </div>
     </div>
-</div>
-<div class='about-container'>
-    <div class='about-content'>
+</section>
+<section class='score-container section'>
+    <div class='score-content'>
         <div class='score-container'>
             <div class='score'>
                 <h3>90/100</h3>
                 <p>GAMEGRIN</p>
+                <div class='score-fill'>
+                </div>
+            </div>
+            <div class='score'>
+                <h3>9/10</h3>
+                <p>NINTENDO LIFE</p>
+                <div class='score-fill'>
+                </div>
+            </div>
+            <div class='score'>
+                <h3>4/5</h3>
+                <p>EUROGAMER</p>
+                <div class='score-fill'>
+                </div>
             </div>
         </div>
     </div>
-    <div class='about-content'>
+    <div class='score-content'>
         <img alt='' src='../assets/web/about.png'>
     </div>
-    <div class='about-content'>
+    <div class='score-content'>
+        <div class='score-container'>
+            <div class='score'>
+                <h3>8.5/10</h3>
+                <p>POLYGON.COM</p>
+                <div class='score-fill'>
+                </div>
+            </div>
+            <div class='score'>
+                <h3>9.5/10</h3>
+                <p>GAMEINFORMER</p>
+                <div class='score-fill'>
+                </div>
+            </div>
+            <div class='score'>
+                <h3>90/100</h3>
+                <p>IGN</p>
+                <div class='score-fill'>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-<div class='features-container'>
-    <p>
-        • From each character to subtle background elements, everything is lovingly hand-animated.
-    </p>
-    <p>
-        • Easy to pick up, difficult to master; enemies are vicious and numerous, hazards will easily crush your
-        frail body, and friendly faces remain rare.
-    </p>
-    <p>
-        • Upgrade weapons, learn new skills, discover equipment and traverse a dark, detailed world with
-        branching
-        paths and secrets abound.
-    </p>
-</div>
-<div class='features-container'>
-    <img alt='' src='../assets/web/campfire.png'>
+</section>
+<section class='about-container section'>
+    <div class='inner-container'>
+        <div class='images-container'>
+            <div class='image-box-first'>
+                <img src='../assets/web/about/gif_1.gif'>
+                <img src='../assets/web/about/gif_2.gif'>
+            </div>
+        </div>
+        <div class='about-content'>
+            <h1>
+                ABOUT
+            </h1>
+            <div class='line'></div>
+            <p>
+                Echoes of a dark and violent past resonate throughout a savage land, steeped in treasure and blood.
+                Hyper Light Drifter is an action adventure RPG in the vein of the best 16­bit classics, with
+                modernized
+                mechanics and designs on a much grander scale
+            </p>
+            <p>
+                Drifters of this world are the collectors of forgotten knowledge, lost technologies and broken
+                histories. Our Drifter is haunted by an insatiable illness, traveling further into the lands of
+                Buried
+                Time, hoping to discover a way to quiet the vicious disease.
+            </p>
+        </div>
+    </div>
+    <div class='inner-container'>
+        <div class='about-content'>
+            <h1>
+                ABOUT
+            </h1>
+            <div class='line'></div>
+            <p>
+                Echoes of a dark and violent past resonate throughout a savage land, steeped in treasure and blood.
+                Hyper Light Drifter is an action adventure RPG in the vein of the best 16­bit classics, with
+                modernized
+                mechanics and designs on a much grander scale
+            </p>
+            <p>
+                Drifters of this world are the collectors of forgotten knowledge, lost technologies and broken
+                histories. Our Drifter is haunted by an insatiable illness, traveling further into the lands of
+                Buried
+                Time, hoping to discover a way to quiet the vicious disease.
+            </p>
+        </div>
+        <div class='images-container'>
+            <div class='image-box'>
+                <img src='../assets/web/about/gif_3.gif'>
+            </div>
+        </div>
+    </div>
+    <div class='inner-container'>
+        <div class='images-container'>
+            <div class='image-box'>
+                <img src='../assets/web/about/gif_4.gif'>
+            </div>
+        </div>
+        <div class='about-content'>
+            <h1>
+                ABOUT
+            </h1>
+            <div class='line'></div>
+            <p>
+                Echoes of a dark and violent past resonate throughout a savage land, steeped in treasure and blood.
+                Hyper Light Drifter is an action adventure RPG in the vein of the best 16­bit classics, with
+                modernized
+                mechanics and designs on a much grander scale
+            </p>
+            <p>
+                Drifters of this world are the collectors of forgotten knowledge, lost technologies and broken
+                histories. Our Drifter is haunted by an insatiable illness, traveling further into the lands of
+                Buried
+                Time, hoping to discover a way to quiet the vicious disease.
+            </p>
+        </div>
+    </div>
+</section>
+<section class='main-character-container section'>
+    <!--    <img alt='' src='../assets/web/campfire.png'>-->
     <div class='image-cover'>
     </div>
-    <div class='features-text-container'>
-        <h1>FEATURES</h1>
+    <div class='main-character-text-container'>
+        <h1>MAIN CHARACTER</h1>
         <p>
-            From each character to subtle background elements, everything is lovingly hand-animated.
+            The Drifter, a member of the feline Blu species who has been infected with a strange terminal
+            disease. The Drifter came to the Land of Light from the Northern Realms and travels the new continent in
+            search of a cure.
         </p>
         <p>
-            Easy to pick up, difficult to master; enemies are vicious and numerous, hazards will easily crush your frail
-            body, and friendly faces remain rare.
+            The Drifter is well versed in multiple combat abilities. He is more than capable with a sword, and with
+            any
+            form of energy-based firearm.
         </p>
         <p>
-            Upgrade weapons, learn new skills, discover equipment and traverse a dark, detailed world with branching
-            paths and secrets abound
+            “A lonely soul, in a desperate search.“
         </p>
     </div>
-</div>
-<div class='main-character-container'>
-    <img src='../assets/web/main-character.gif'>
-</div>
-<div class='map-container'>
+</section>
+<section class='world-container section'>
+    <div class='inner-container'>
+        <h3>
+            EXPLORE THE WORLD OF LIGHT
+        </h3>
+        <div class='content'>
+            <div class='image-carousel'>
+                <div class='image-box'>
+                    <div class='arrow arrow-left'>
+                        <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
+                            <path
+                                d='M15.293 3.293 6.586 12l8.707 8.707 1.414-1.414L9.414 12l7.293-7.293-1.414-1.414z'
+                                fill='white' />
+                        </svg>
+                    </div>
+                    <img alt='' src='../assets/web/carousel/carousel_1.png'>
+                    <div class='arrow arrow-right'>
+                        <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
+                            <path
+                                d='M7.293 4.707 14.586 12l-7.293 7.293 1.414 1.414L17.414 12 8.707 3.293 7.293 4.707z'
+                                fill='white' />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class='image-description'>
+                <h3>
+                    The Midnight Woods
+                </h3>
+                <h5>
+                    Difficulty
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+
+                </h5>
+                <p>
+                    The Crystal Forest or Midnight Woods is a biome on the West area of the land of light.
+
+                </p>
+                <p>
+                    It is filled with various green regenerative Hard Light Crystals. The crystals seem infectious, as
+                    the inhabitors of the forest can become encased in them.Various Crystal Beasts seem to be the
+                    outcome of being infected by these crystals.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- <div class='map-container'>
     <h1>EXPLORE THE LAND OF LIGHT</h1>
     <div class='image-container'>
         <img alt='Color' class='map-top' src='../assets/web/map-upground.png' />
         <img alt='B/W' class='map-bottom' src='../assets/web/map-underground.png' />
         <input class='image-range' max='100' min='0'
-               oninput="this.parentNode.style.setProperty('--value', `${this.value}%`)"
+               oninput="this.parentNode.style.setProperty('&#45;&#45;value', `${this.value}%`)"
                step='0.001' type='range'
                value='50' />
     </div>
-</div>
+</div> -->
+<section class='ost-container section'>
+    <canvas height='1080' id='audio-visualizer' width='1920'>
+
+    </canvas>
+</section>
+<section class='footer section'>
+    <img src='../assets/web/footer.png'>
+    <div class='footer-container'>
+        <div class='footer-header'>
+            <div class='icons'>
+                <svg class='bi bi-instagram' fill='red' height='24' viewBox='0 0 16 16'
+                     width='24' xmlns='http://www.w3.org/2000/svg'>
+                    <path
+                        d='M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z' />
+                </svg>
+            </div>
+            <div class='icons'>
+                <svg class='bi bi-twitter' fill='#1DA1F2' height='24' viewBox='0 0 16 16' width='24'
+                     xmlns='http://www.w3.org/2000/svg'>
+                    <path
+                        d='M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z' />
+                </svg>
+            </div>
+            <div class='icons'>
+                <svg class='bi bi-youtube' fill='red' height='24' viewBox='0 0 16 16' width='24'
+                     xmlns='http://www.w3.org/2000/svg'>
+                    <path
+                        d='M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.007 2.007 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.007 2.007 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31.4 31.4 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.007 2.007 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A99.788 99.788 0 0 1 7.858 2h.193zM6.4 5.209v4.818l4.157-2.408L6.4 5.209z' />
+                </svg>
+            </div>
+        </div>
+        <div class='footer-content'>
+            Copyright © 2023 Yahkerobertkertasnya
+        </div>
+    </div>
+</section>
 <script
     crossorigin='anonymous'
     integrity='sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM='
     src='https://code.jquery.com/jquery-3.7.0.js'
 ></script>
-<script src='../js/web/web.js'></script>
+<script src='../js/web/web.js' type='module'></script>
 </body>
 </html>
