--- a/html/index.html
+++ b/html/index.html
@@ -349,7 +349,7 @@
         </div>
     </div>
 </section>
-<!-- <div class='map-container'>
+<div class='map-container'>
     <h1>EXPLORE THE LAND OF LIGHT</h1>
     <div class='image-container'>
         <img alt='Color' class='map-top' src='../assets/web/map-upground.png' />
@@ -359,7 +359,7 @@
                step='0.001' type='range'
                value='50' />
     </div>
-</div> -->
+</div>
 <section class='ost-container section'>
     <canvas height='1080' id='audio-visualizer' width='1920'>
 
