front additions + game fixed

--- a/html/index.html
+++ b/html/index.html
@@ -293,7 +293,7 @@
         <h3>
             EXPLORE THE WORLD OF LIGHT
         </h3>
-        <div class='content'>
+        <div class='content active'>
             <div class='image-carousel'>
                 <div class='image-box'>
                     <div class='arrow arrow-left'>
@@ -304,6 +304,168 @@
                         </svg>
                     </div>
                     <img alt='' src='../assets/web/carousel/carousel_1.png'>
+                    <div class='arrow arrow-right'>
+                        <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
+                            <path
+                                d='M7.293 4.707 14.586 12l-7.293 7.293 1.414 1.414L17.414 12 8.707 3.293 7.293 4.707z'
+                                fill='white' />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class='image-description'>
+                <h3>
+                    The Midnight Woods
+                </h3>
+                <h5>
+                    Difficulty
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+
+                </h5>
+                <p>
+                    The Crystal Forest or Midnight Woods is a biome on the West area of the land of light.
+
+                </p>
+                <p>
+                    It is filled with various green regenerative Hard Light Crystals. The crystals seem infectious, as
+                    the inhabitors of the forest can become encased in them.Various Crystal Beasts seem to be the
+                    outcome of being infected by these crystals.
+                </p>
+            </div>
+        </div>
+        <div class='content'>
+            <div class='image-carousel'>
+                <div class='image-box'>
+                    <div class='arrow arrow-left'>
+                        <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
+                            <path
+                                d='M15.293 3.293 6.586 12l8.707 8.707 1.414-1.414L9.414 12l7.293-7.293-1.414-1.414z'
+                                fill='white' />
+                        </svg>
+                    </div>
+                    <img alt='' src='../assets/web/carousel/carousel_2.png'>
+                    <div class='arrow arrow-right'>
+                        <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
+                            <path
+                                d='M7.293 4.707 14.586 12l-7.293 7.293 1.414 1.414L17.414 12 8.707 3.293 7.293 4.707z'
+                                fill='white' />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class='image-description'>
+                <h3>
+                    The Midnight Woods
+                </h3>
+                <h5>
+                    Difficulty
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+
+                </h5>
+                <p>
+                    The Crystal Forest or Midnight Woods is a biome on the West area of the land of light.
+
+                </p>
+                <p>
+                    It is filled with various green regenerative Hard Light Crystals. The crystals seem infectious, as
+                    the inhabitors of the forest can become encased in them.Various Crystal Beasts seem to be the
+                    outcome of being infected by these crystals.
+                </p>
+            </div>
+        </div>
+        <div class='content'>
+            <div class='image-carousel'>
+                <div class='image-box'>
+                    <div class='arrow arrow-left'>
+                        <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
+                            <path
+                                d='M15.293 3.293 6.586 12l8.707 8.707 1.414-1.414L9.414 12l7.293-7.293-1.414-1.414z'
+                                fill='white' />
+                        </svg>
+                    </div>
+                    <img alt='' src='../assets/web/carousel/carousel_3.png'>
+                    <div class='arrow arrow-right'>
+                        <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
+                            <path
+                                d='M7.293 4.707 14.586 12l-7.293 7.293 1.414 1.414L17.414 12 8.707 3.293 7.293 4.707z'
+                                fill='white' />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class='image-description'>
+                <h3>
+                    The Midnight Woods
+                </h3>
+                <h5>
+                    Difficulty
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+                    <svg height='25' width='25' xmlns='http://www.w3.org/2000/svg'>
+                        <circle cx='12.5' cy='12.5' fill='white' r='10' />
+                    </svg>
+
+                </h5>
+                <p>
+                    The Crystal Forest or Midnight Woods is a biome on the West area of the land of light.
+
+                </p>
+                <p>
+                    It is filled with various green regenerative Hard Light Crystals. The crystals seem infectious, as
+                    the inhabitors of the forest can become encased in them.Various Crystal Beasts seem to be the
+                    outcome of being infected by these crystals.
+                </p>
+            </div>
+        </div>
+        <div class='content'>
+            <div class='image-carousel'>
+                <div class='image-box'>
+                    <div class='arrow arrow-left'>
+                        <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
+                            <path
+                                d='M15.293 3.293 6.586 12l8.707 8.707 1.414-1.414L9.414 12l7.293-7.293-1.414-1.414z'
+                                fill='white' />
+                        </svg>
+                    </div>
+                    <img alt='' src='../assets/web/carousel/carousel_4.png'>
                     <div class='arrow arrow-right'>
                         <svg height='24' width='24' xmlns='http://www.w3.org/2000/svg'>
                             <path
